--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: "研究ノート"
+description: "研究関連の情報をまとめたノート（新4年生向けの情報が多めです）"
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+baseurl: "/note"
+url: "https://takahiro-kawaguchi.github.io"
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
